--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,10 +11,17 @@ android {
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
+        defaultConfig {
+            ndk {
+                abiFilters "x86", "x86_64", "arm64-v8a", "armeabi-v7a", "armeabi"
+            }
+        }
+
         release {
             minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+
     }
 }
 
